apps/narrowcast-content/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: narrowcast-content
  name: narrowcast-content
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: narrowcast-content
  sessionAffinity: None
  type: ClusterIP
