apps/narrowcast-content/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: narrowcast-content
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - narrowcast-content.wisv.ch
  rules:
  - backendRefs:
    - name: narrowcast-content
      port: 80
